Fixed - columns overlap in flow detail table #459

--- a/src/components/Graphs/Table/style.css
+++ b/src/components/Graphs/Table/style.css
@@ -15,5 +15,5 @@
 
 table tbody tr:hover {
     background-color: #f2f2f2;
-    cursor: pointer !important;
+    cursor: pointer;
 }
